--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,14 @@
-html, body {
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: 'Segoe UI', sans-serif;
-  overflow: hidden;
+  font-family: "Inter", sans-serif;  overflow: visible !important;
+  position: relative;
 }
+
 
 .page-content {
   margin-top: 60px;
@@ -18,7 +22,11 @@ html, body {
   width: 100%;
   height: 100%;
 }
-
+html,
+body {
+  height: 100%;
+  overflow-y: auto;
+}
 .sidebar {
   width: 250px;
   background: #fff;
@@ -119,8 +127,6 @@ html, body {
 .send-button:hover {
   color: #0051aa;
 }
-
-
 
 @media (max-width: 768px) {
   .sidebar {
